# Intellectual-Gate

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
source/: Editor.cpp  Editor.h  Processor.cpp  Processor.h
source/common/: Colours.h  Parameters.h
source/dsp/: Compressor.cpp  Compressor.h  HighpassFilter.cpp  HighpassFilter.h
source/ui/: LevelMeter.cpp  LevelMeter.h  SpectrumAnalyser.cpp  SpectrumAnalyser.h
tests/: Processor_test.cpp
